# unnamed-dungeon-crawler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cloc.sh  useful_links.txt
data/base/borders/: border.xml
data/base/dungeons/: debug-room.lua  debug-room.xml  dungeon1.lua  dungeon1.xml
data/base/encounters/: dungeon1_slime1.lua  dungeon1_slime1.xml
data/base/enemies/: slime.lua  slime.xml
data/base/entities/: chest.lua  chest.xml  enemy.lua  enemy.xml  player.lua  player.xml  stairs.lua  stairs.xml
data/base/equips/: bow.xml  junk-sword-of-testing1.xml  junk-sword-of-testing2.xml  junk-sword-of-testing3.xml  junk-sword-of-testing4.xml  knife.xml  nice-sword.xml  staff.xml  subligaria-of-tanking.xml  sword.xml
data/base/fonts/: standard_font.xml
data/base/heroes/: heals.xml  melee.xml  ranged.xml  tank.xml  ulzo.xml
data/base/menu/: menu-window-border.xml
data/base/scripts/: battle.lua  event.lua  field.lua  game.lua  main.lua  player.lua  stairs.lua  temp.lua  test.lua  test2.lua  ui.lua
data/base/scripts/battle/: Battle.lua  BattleChar.lua  BattleConsts.lua
data/base/scripts/events/: CompositeEvent.lua  Event.lua  EventManager.lua
data/base/scripts/field/: Floor.lua  FloorConsts.lua  FloorEntity.lua
data/base/scripts/game/: MessageLog.lua
data/base/scripts/processes/: DialogTextAnimProcess.lua  Process.lua  ProcessManager.lua
data/base/scripts/ui/: ChoiceMenu.lua  ChoiceWindow.lua  Dialog.lua  DialogWindow.lua  EquipWindow.lua  HeroStatusWindow.lua  MenuItem.lua  Window.lua  (+1 more)
data/base/skills/: attack.lua  attack.xml  do_nothing.lua  do_nothing.xml  insta_kill.lua  insta_kill.xml  magic_arrow.lua  magic_arrow.xml  magic_blast.lua  magic_blast.xml  mega_hit.lua  mega_hit.xml  self_faint.lua  self_faint.xml  skilltest1.lua  skilltest1.xml  sword_attack.lua  sword_attack.xml
data/base/spritesheets/: chest.xml  enemy.xml  enemy_battle_sprite.xml  player.xml  stairs.xml  testbackground.xml
data/base/tiles/: tile00.xml  tile01.xml  tile02.xml
notes/: notes.md  useful_links.txt
src/: Console.cpp  Console.h  Game.cpp  Game.h  IInputReceiver.h  IRenderable.h  InputManager.cpp  InputManager.h  MenuManager.cpp  MenuManager.h  RenderManager.cpp  RenderManager.h  SaveManager.cpp  SaveManager.h  ScriptManager.cpp  ScriptManager.h  lua_data.cpp  lua_data.h  lua_save.cpp  lua_save.h  main.cpp
src/data/: DataManager.cpp  DataManager.h
src/res/: CharData.h  DungeonData.h  EnemyData.h  EntityData.h  EquipData.h  FieldEntityData.h  FontData.h  HeroData.h  ResourceManager.cpp  ResourceManager.h  SkillData.h  Stats.h  default_sprite.c
src/save/: SaveManager.cpp  SaveManager.h
src/stage/: Stage.cpp  Stage.h  StageManager.cpp  StageManager.h
src/ui/: MenuManager.cpp  MenuManager.h  lua_menu.cpp  lua_menu.h  lua_menuitem.cpp  lua_menuitem.h  lua_window.cpp  lua_window.h  ui_lua_bindings.cpp
tools/: font_make.py
(+13 files in other folders)
